vbnc/vbnc/tests/Errors/32007.vb
Class T
    Const M_Char_Char As Char = 12S
End Class